src/Test/ElementServices/FeatureTests/TestData/bvt/parser/Errors/Error_DupDerivedDictionaryKey.xaml
<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation" xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
<DockPanel
    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
>
    <DockPanel.Resources>
        <Style TargetType="{x:Type Button}">
            <Setter Property="Background" Value="Cyan" />
        </Style>
        <Style TargetType="{x:Type ctrl:Button}" xmlns:ctrl="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
            <Setter Property="Background" Value="Blue" />
        </Style>
    </DockPanel.Resources>
</DockPanel>

</Page>
